; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_comboex.c_COMBOEX_GetComboFontSize.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_comboex.c_COMBOEX_GetComboFontSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@COMBOEX_GetComboFontSize.strA = internal constant [2 x i8] c"A\00", align 1
@WM_GETFONT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"selected font hwnd=%p, height=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, %struct.TYPE_6__*)* @COMBOEX_GetComboFontSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @COMBOEX_GetComboFontSize(%struct.TYPE_7__* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %4, align 8
  %8 = call i32 @GetDC(i32 0)
  store i32 %8, i32* %7, align 4
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @WM_GETFONT, align 4
  %13 = call i64 @SendMessageW(i32 %11, i32 %12, i32 0, i32 0)
  store i64 %13, i64* %5, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i64, i64* %5, align 8
  %16 = call i64 @SelectObject(i32 %14, i64 %15)
  store i64 %16, i64* %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %19 = call i32 @GetTextExtentPointW(i32 %17, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @COMBOEX_GetComboFontSize.strA, i64 0, i64 0), i32 1, %struct.TYPE_6__* %18)
  %20 = load i32, i32* %7, align 4
  %21 = load i64, i64* %6, align 8
  %22 = call i64 @SelectObject(i32 %20, i64 %21)
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @ReleaseDC(i32 0, i32 %23)
  %25 = load i64, i64* %5, align 8
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @TRACE(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i64 %25, i32 %28)
  ret void
}

declare dso_local i32 @GetDC(i32) #1

declare dso_local i64 @SendMessageW(i32, i32, i32, i32) #1

declare dso_local i64 @SelectObject(i32, i64) #1

declare dso_local i32 @GetTextExtentPointW(i32, i8*, i32, %struct.TYPE_6__*) #1

declare dso_local i32 @ReleaseDC(i32, i32) #1

declare dso_local i32 @TRACE(i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
